--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ body {
   font-family: 'Roboto', 'Arial', sans-serif;
   max-width: 1440px;
   margin: 0 auto;
+  height: 100%;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  min-height: 100vh;
 }
 
 .header {
@@ -26,20 +33,83 @@ body {
   text-shadow: 1px 2px 6px black;
 }
 
+.slider__indicator {
+  list-style: none;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin: 16px auto;
+}
+
+.slider__point {
+  width: 10px;
+  height: 10px;
+  outline: 1px solid black;
+  border-radius: 50%;
+  padding: 8px;
+}
+
+.slider__point_active {
+  background-color: #6ea285;
+}
+
+.slider {
+  width: calc(100% - 100px);
+  margin: 0 auto;
+}
+
 .slider__container {
   margin: 0 auto;
   max-width: 1200px;
+  min-height: 450px;
+  outline: 2px solid black;
+  position: relative;
+  overflow: hidden;
 }
 
-.slider__container:before {
-  position: relative;
+.slider-line {
+  position: absolute;
   top: 0;
   left: 0;
+  display: flex;
+  height: 100%;
+  transition: .8s ease-in-out;
 }
 
 .slider__image {
-  width: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
+  width: 1200px;
+  object-fit: cover;
+}
+
+.slider__controller {
+  margin: 30px auto;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.slider__button {
+  width: 100px;
+  height: 35px;
+  background: none;
+  border: 1px solid;
+  cursor: pointer;
+  transition: .6s ease;
+}
+
+.slider__button:hover {
+  background-color: #6ea285;
+}
+
+.footer {
+  background-color: #6ea285;
+  color: white;
+  min-height: 50px;
+  display: flex;
+  align-items: center;
+}
+
+.footer__copyright {
+  color: white;
+  margin: 0 auto 0 30px;
 }
